fix: fix jvm opts