@@ -15,7 +15,7 @@
 $ heroku apps:create your-app
 $ heroku config:set SPRING_PROFILES_ACTIVE=prod
 $ heroku config:set TZ=Asia/Tokyo
-$ heroku config:set 'JAVA_OPTS=-XX:+UseCompressedOops -XX:+UseStringDeduplication --illegal-access=deny'
+$ heroku config:set 'JAVA_OPTS=-Xmx200m -XX:+UseCompressedOops -XX:+UseStringDeduplication -XX:-OmitStackTraceInFastThrow -Dlog4j2.formatMsgNoLookups=true'
 
 # Setup Redis
 $ heroku addons:create heroku-redis:hobby-dev
